--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_neumorphic: ^3.0.3
   web_socket_channel: ^1.1.0
   cupertino_icons: ^1.0.0
+  shared_preferences: ^0.5.12+4
+  path_provider: ^1.6.27
+  flutter_secure_storage: ^3.3.5
+  http: ^0.12.2
+  dio: ^3.0.10
+  flutter_icons: ^0.3.1
+  ionicons: ^0.0.3
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +49,15 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: Courier
+      fonts:
+        - asset: assets/CourierPrime-Bold.ttf
+          weight: 700
+        - asset: assets/CourierPrime-Regular.ttf
+          weight: 500
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
