--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,14 +26,11 @@ dependencies:
 
   flutter_neumorphic: ^3.0.3
   web_socket_channel: ^1.1.0
-  cupertino_icons: ^1.0.0
   shared_preferences: ^0.5.12+4
-  path_provider: ^1.6.27
-  flutter_secure_storage: ^3.3.5
-  http: ^0.12.2
   dio: ^3.0.10
   flutter_icons: ^0.3.1
   ionicons: ^0.0.3
+  adaptive_dialog: ^0.9.3
 
 dev_dependencies:
   flutter_test:
